<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/txtPhonenumber"
        app:layout_constraintEnd_toStartOf="@+id/imgEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lblEmail"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintEnd_toStartOf="@+id/txtPhonenumber"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        app:srcCompat="@drawable/ic_email_24dp" />

    <TextView
        android:id="@+id/lblPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPhonenumber"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtPhonenumber"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:nextFocusDown="@id/txtAddress"
        app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblPhonenumber" />

    <ImageView
        android:id="@+id/imgPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lblPhonenumber"
        android:src="@drawable/ic_call_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPhonenumber" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtAddress"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:nextFocusDown="@id/txtWeb"
        app:layout_constraintEnd_toStartOf="@+id/imgAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />

    <ImageView
        android:id="@+id/imgAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lblAddress"
        android:src="@drawable/ic_map_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtWeb"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:nextFocusDown="@id/txtName"
        app:layout_constraintEnd_toStartOf="@+id/imgWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb" />

    <ImageView
        android:id="@+id/imgWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lblWeb"
        android:src="@drawable/ic_web_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtWeb" />

    <TextView
        android:id="@+id/lblRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRequired"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeb" />


</androidx.constraintlayout.widget.ConstraintLayout>